--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.7",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
   },
@@ -32,5 +33,13 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mquint18/FinalProject.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mquint18/FinalProject/issues"
+  },
+  "homepage": "https://github.com/mquint18/FinalProject#readme"
 }
